

syntax = "proto3";

package users;
service UserService {
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc GetUserById (GetUserByIdRequest) returns (User);
  rpc GetAllUsers (GetAllUsersRequest) returns (Users);
  rpc UpdateUser (UpdateUserRequest) returns (User);
  rpc PrintHello (HelloRequest) returns (HelloResponse);
}


message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}



message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string phoneNumber = 4;
  string address = 5;
  string createdAt = 6;
  string updatedAt = 7;
}

message Users {
  repeated User users = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string hashedpassword = 3;
  string phoneNumber = 4;
  string address = 5;
}

message GetUserByIdRequest {
  string id = 1;
}

message GetAllUsersRequest {}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string hashedpassword = 4;
  string phoneNumber = 5;
  string address = 6;
}